overflow fix

--- a/master/less/style.less
+++ b/master/less/style.less
@@ -255,6 +255,7 @@ h2.services{
   right:0;
   bottom:0;
   z-index: 1000000;
+  overflow-y: auto;
 }
 
 
